[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "phctop"
version = "1.0.1"
description = "Real-time monitoring tool for PTP Hardware Clocks on Linux"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Yannik Motzet", email = "yannik.motzet@outlook.com"}
]
keywords = ["ptp", "hardware", "clock", "monitoring", "network", "timing", "synchronization", "ieee1588", "gPTP", "802.1AS"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking :: Time Synchronization",
]

[project.urls]
Homepage = "https://github.com/yannikmotzet/phctop"
"Bug Reports" = "https://github.com/yannikmotzet/phctop/issues"
"Source" = "https://github.com/yannikmotzet/phctop"

[project.scripts]
phctop = "phctop:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "flake8>=3.9",
]

[tool.setuptools]
py-modules = ["phctop"]